<resources>
    <string name="app_name">Classic Game Anthology</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_menu_about">About...</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="title_activity_connect_four">Connect Four</string>
    <string name="title_activity_pente">Pente</string>
    <string name="title_activity_reversi">Reversi</string>
    <string name="title_activity_player_management">Players</string>
    <string name="name_player1">Joe Schmoe</string>
    <string name="name_player2">Bob Slob</string>
    <string name="display_player_turn">Joe</string>
    <string name="player_one">Joe Schmoe</string>
    <string name="player_two">Bob Slob</string>
    <string name="player_one_score"> 0 </string>
    <string name="player_two_score"> 0 </string>
    <string name="title_activity_main_game">Connect Four</string>
    <string name="title_activity_view_standings">Standings</string>
    <string name="title_activity_set_names">Names</string>
    <string name="filenameNames">ConnectFour_Names</string>
    <string name="filenameStandings">ConnectFour_Standings</string>
    <string name="filenameCurrentGame">ConnectFour_CurrentGame</string>
    <string name="saveGameButtonString"> Save? </string>
    <string name="confirmGuessButtonString">" Confirm \nGuess "</string>
    <string name="currentPlayerManagement">. .</string>
    <string name="pente_captures_hint">Captures</string>
    <string name="player_one_captures">0</string>
    <string name="player_two_captures">0</string>
    <string name="reversi_pieces_hint">Pieces</string>
    <string name="player_one_pieces">0</string>
    <string name="player_two_pieces">0</string>
    <string name="extras_box_1">CheckedView A</string>
    <string name="extras_box_2">CheckedView B</string>
    <string name="currentPlayerGlobalWins">Total Wins: </string>
    <string name="currentPlayerGlobalMatches">Total Matches: </string>
    <string name="currentPlayerLocalWins">00</string>
    <string name="currentPlayerLocalMatches">00</string>
    <string name="button_01_01"></string>
    <string name="button_01_02"></string>
    <string name="button_01_03"></string>
    <string name="button_01_04" />
    <string name="button_01_05" />
    <string name="button_01_06" />
    <string name="button_01_07"></string>
    <string name="button_01_08" />
    <string name="button_01_09" />
    <string name="button_01_10" />
    <string name="button_01_11" />
    <string name="button_01_12" />
    <string name="button_01_13" />
    <string name="button_01_14" />
    <string name="button_01_15" />
    <string name="button_02_01"></string>
    <string name="button_02_02"></string>
    <string name="button_02_03"></string>
    <string name="button_02_04" />
    <string name="button_02_05" />
    <string name="button_02_06" />
    <string name="button_02_07" />
    <string name="button_02_08" />
    <string name="button_02_09" />
    <string name="button_02_10" />
    <string name="button_02_11" />
    <string name="button_02_12" />
    <string name="button_02_13" />
    <string name="button_02_14" />
    <string name="button_02_15" />
    <string name="button_03_01"></string>
    <string name="button_03_02"></string>
    <string name="button_03_03"></string>
    <string name="button_03_04" />
    <string name="button_03_05" />
    <string name="button_03_06" />
    <string name="button_03_07" />
    <string name="button_03_08" />
    <string name="button_03_09" />
    <string name="button_03_10" />
    <string name="button_03_11" />
    <string name="button_03_12" />
    <string name="button_03_13" />
    <string name="button_03_14" />
    <string name="button_03_15" />
    <string name="button_04_01"></string>
    <string name="button_04_02"></string>
    <string name="button_04_03"></string>
    <string name="button_04_04" />
    <string name="button_04_05" />
    <string name="button_04_06" />
    <string name="button_04_07" />
    <string name="button_04_08" />
    <string name="button_04_09" />
    <string name="button_04_10" />
    <string name="button_04_11" />
    <string name="button_04_12" />
    <string name="button_04_13" />
    <string name="button_04_14" />
    <string name="button_04_15" />
    <string name="button_05_01"></string>
    <string name="button_05_02"></string>
    <string name="button_05_03"></string>
    <string name="button_05_04" />
    <string name="button_05_05" />
    <string name="button_05_06" />
    <string name="button_05_07" />
    <string name="button_05_08" />
    <string name="button_05_09" />
    <string name="button_05_10" />
    <string name="button_05_11" />
    <string name="button_05_12" />
    <string name="button_05_13" />
    <string name="button_05_14" />
    <string name="button_05_15" />
    <string name="button_06_01"></string>
    <string name="button_06_02"></string>
    <string name="button_06_03"></string>
    <string name="button_06_04" />
    <string name="button_06_05" />
    <string name="button_06_06" />
    <string name="button_06_07" />
    <string name="button_06_08" />
    <string name="button_06_09" />
    <string name="button_06_10" />
    <string name="button_06_11" />
    <string name="button_06_12" />
    <string name="button_06_13" />
    <string name="button_06_14" />
    <string name="button_06_15" />
    <string name="button_07_01"></string>
    <string name="button_07_02"></string>
    <string name="button_07_03"></string>
    <string name="button_07_04" />
    <string name="button_07_05" />
    <string name="button_07_06" />
    <string name="button_07_07" />
    <string name="button_07_08" />
    <string name="button_07_09" />
    <string name="button_07_10" />
    <string name="button_07_11" />
    <string name="button_07_12" />
    <string name="button_07_13" />
    <string name="button_07_14" />
    <string name="button_07_15" />
    <string name="button_08_01"></string>
    <string name="button_08_02"></string>
    <string name="button_08_03"></string>
    <string name="button_08_04" />
    <string name="button_08_05" />
    <string name="button_08_06" />
    <string name="button_08_07" />
    <string name="button_08_08" />
    <string name="button_08_09" />
    <string name="button_08_10" />
    <string name="button_08_11" />
    <string name="button_08_12" />
    <string name="button_08_13" />
    <string name="button_08_14" />
    <string name="button_08_15" />
    <string name="button_09_01"></string>
    <string name="button_09_02"></string>
    <string name="button_09_03"></string>
    <string name="button_09_04" />
    <string name="button_09_05" />
    <string name="button_09_06" />
    <string name="button_09_07" />
    <string name="button_09_08" />
    <string name="button_09_09" />
    <string name="button_09_10" />
    <string name="button_09_11" />
    <string name="button_09_12" />
    <string name="button_09_13" />
    <string name="button_09_14" />
    <string name="button_09_15" />
    <string name="button_10_01"></string>
    <string name="button_10_02"></string>
    <string name="button_10_03"></string>
    <string name="button_10_04" />
    <string name="button_10_05" />
    <string name="button_10_06" />
    <string name="button_10_07" />
    <string name="button_10_08" />
    <string name="button_10_09" />
    <string name="button_10_10" />
    <string name="button_10_11" />
    <string name="button_10_12" />
    <string name="button_10_13" />
    <string name="button_10_14" />
    <string name="button_10_15" />
    <string name="button_11_01"></string>
    <string name="button_11_02"></string>
    <string name="button_11_03"></string>
    <string name="button_11_04" />
    <string name="button_11_05" />
    <string name="button_11_06" />
    <string name="button_11_07" />
    <string name="button_11_08" />
    <string name="button_11_09" />
    <string name="button_11_10" />
    <string name="button_11_11" />
    <string name="button_11_12" />
    <string name="button_11_13" />
    <string name="button_11_14" />
    <string name="button_11_15" />
    <string name="button_12_01"></string>
    <string name="button_12_02"></string>
    <string name="button_12_03"></string>
    <string name="button_12_04" />
    <string name="button_12_05" />
    <string name="button_12_06" />
    <string name="button_12_07" />
    <string name="button_12_08" />
    <string name="button_12_09" />
    <string name="button_12_10" />
    <string name="button_12_11" />
    <string name="button_12_12" />
    <string name="button_12_13" />
    <string name="button_12_14" />
    <string name="button_12_15" />
    <string name="button_13_01"></string>
    <string name="button_13_02"></string>
    <string name="button_13_03"></string>
    <string name="button_13_04" />
    <string name="button_13_05" />
    <string name="button_13_06" />
    <string name="button_13_07" />
    <string name="button_13_08" />
    <string name="button_13_09" />
    <string name="button_13_10" />
    <string name="button_13_11" />
    <string name="button_13_12" />
    <string name="button_13_13" />
    <string name="button_13_14" />
    <string name="button_13_15" />
    <string name="button_14_01"></string>
    <string name="button_14_02"></string>
    <string name="button_14_03"></string>
    <string name="button_14_04" />
    <string name="button_14_05" />
    <string name="button_14_06" />
    <string name="button_14_07" />
    <string name="button_14_08" />
    <string name="button_14_09" />
    <string name="button_14_10" />
    <string name="button_14_11" />
    <string name="button_14_12" />
    <string name="button_14_13" />
    <string name="button_14_14" />
    <string name="button_14_15" />
    <string name="button_15_01"></string>
    <string name="button_15_02"></string>
    <string name="button_15_03"></string>
    <string name="button_15_04" />
    <string name="button_15_05" />
    <string name="button_15_06" />
    <string name="button_15_07" />
    <string name="button_15_08" />
    <string name="button_15_09" />
    <string name="button_15_10" />
    <string name="button_15_11" />
    <string name="button_15_12" />
    <string name="button_15_13" />
    <string name="button_15_14" />
    <string name="button_15_15" />
    <string name="placement_bomb">B</string>
    <string name="placement_marshall">1</string>
    <string name="placement_general">2</string>
    <string name="placement_colonel">3</string>
    <string name="placement_major">4</string>
    <string name="placement_captain">5</string>
    <string name="placement_lieutenant">6</string>
    <string name="placement_sergeant">7</string>
    <string name="placement_miner">8</string>
    <string name="placement_scout">9</string>
    <string name="placement_spy">S</string>
    <string name="placement_flag">F</string>
    <string name="placement_hint_bomb">6</string>
    <string name="placement_hint_marshall">1</string>
    <string name="placement_hint_general">1</string>
    <string name="placement_hint_colonel">2</string>
    <string name="placement_hint_major">3</string>
    <string name="placement_hint_captain">4</string>
    <string name="placement_hint_lieutenant">4</string>
    <string name="placement_hint_sergeant">4</string>
    <string name="placement_hint_miner">5</string>
    <string name="placement_hint_scout">8</string>
    <string name="placement_hint_spy">1</string>
    <string name="placement_hint_flag">1</string>
    <string name="title_activity_mastermind">Mastermind</string>
    <string name="title_activity_stratego">Stratego</string>
    <string name="action_settings">Settings</string>
</resources>